--- a/Block 4/Topic 1/Task 2.2/css/style.css
+++ b/Block 4/Topic 1/Task 2.2/css/style.css
@@ -342,6 +342,7 @@ h2 {
   height: 100%;
   position: relative;
   overflow: hidden;
+  /* transition: scroll 250ms ease-in; */
 }
 
 .carousel__track {
